# sot-talos

./: CMakeLists.txt  package.xml
src/: CMakeLists.txt  sot-talos-device.cpp
src/dynamic_graph/sot/talos/: talos.py
